frontend/ Added dependency as appmonitor

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,6 +52,8 @@ repositories {
 }
 
 dependencies {
+    implementation "com.movingtech:appmonitor:1.0.2"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation "androidx.core:core-ktx:1.12.0"
     implementation "androidx.appcompat:appcompat:1.6.1"
