--- a/android/build.gradle
+++ b/android/build.gradle
@@ -74,4 +74,7 @@ def kotlin_version = getExtOrDefault("kotlinVersion")
 dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  
+  // AppMonitor Android SDK
+  implementation("com.movingtech:appmonitor:1.0.2@aar")
 }
