fix: added appmonitor modules

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Application monitoring tool",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
+  "react-native": "./src/index.tsx",
   "exports": {
     ".": {
       "source": "./src/index.tsx",
@@ -34,7 +35,7 @@
   "scripts": {
     "example": "yarn workspace react-native-app-monitor-example",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
-    "prepare": "bob build",
+    "prepare": "NODE_OPTIONS='--experimental-require-module' bob build",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "release": "release-it --only-version",
@@ -88,6 +89,17 @@
     "react": "*",
     "react-native": "*"
   },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": false
+    },
+    "react-native": {
+      "optional": false
+    }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "workspaces": [
     "example"
   ],
@@ -116,6 +128,9 @@
     "jsSrcsDir": "src",
     "android": {
       "javaPackageName": "com.appmonitor"
+    },
+    "ios": {
+      "moduleName": "AppMonitor"
     }
   },
   "prettier": {
