--- a/example/package.json
+++ b/example/package.json
@@ -25,7 +25,7 @@
     "@react-native/metro-config": "0.81.1",
     "@react-native/typescript-config": "0.81.1",
     "@types/react": "^19.1.0",
-    "react-native-builder-bob": "^0.40.16",
+    "react-native-builder-bob": "0.40.0",
     "react-native-monorepo-config": "^0.1.9"
   },
   "engines": {
