--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "prettier": "^2.8.8",
     "react": "19.1.0",
     "react-native": "0.81.1",
-    "react-native-builder-bob": "^0.40.16",
+    "react-native-builder-bob": "0.40.0",
     "release-it": "^19.0.4",
     "turbo": "^2.5.6",
     "typescript": "^5.9.2"
@@ -99,7 +99,7 @@
     }
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.19.0"
   },
   "workspaces": [
     "example"
