--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "example": "yarn workspace react-native-app-monitor-example",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
     "build": "NODE_OPTIONS='--experimental-require-module' bob build",
-    "prepare": "npm run build",
+    "prepare": "NODE_OPTIONS='--experimental-require-module' bob build",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "release": "release-it --only-version",
