--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   "scripts": {
     "example": "yarn workspace react-native-app-monitor-example",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
-    "build": "NODE_OPTIONS='--experimental-require-module' bob build",
-    "prepare": "NODE_OPTIONS='--experimental-require-module' bob build",
+    "build": "bob build",
+    "prepack": "bob build",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "release": "release-it --only-version",
@@ -61,9 +61,6 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
-  "dependencies": {
-    "react-native-builder-bob": "0.40.0"
-  },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/compat": "^1.3.2",
@@ -85,6 +82,7 @@
     "prettier": "^2.8.8",
     "react": "19.1.0",
     "react-native": "0.81.1",
+    "react-native-builder-bob": "0.40.0",
     "release-it": "^19.0.4",
     "turbo": "^2.5.6",
     "typescript": "^5.9.2"
