--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-app-monitor",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Application monitoring tool",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
@@ -35,8 +35,8 @@
   "scripts": {
     "example": "yarn workspace react-native-app-monitor-example",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
-    "build": "bob build",
-    "prepack": "bob build",
+    "build": "NODE_OPTIONS='--experimental-require-module' bob build",
+    "prepack": "NODE_OPTIONS='--experimental-require-module' bob build",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "release": "release-it --only-version",
