--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,10 @@ jobs:
   build-ios:
     runs-on: macos-latest
 
+    permissions:
+      contents: read
+      packages: read
+
     env:
       XCODE_VERSION: 16.3
       TURBO_CACHE_DIR: .turbo/ios
@@ -153,6 +157,14 @@ jobs:
         with:
           xcode-version: ${{ env.XCODE_VERSION }}
 
+      - name: Configure Git authentication for private repos
+        if: env.turbo_cache_hit != 1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GH }}
+        run: |
+          # Configure git to use the GitHub token for HTTPS authentication
+          git config --global url."https://x-access-token:${GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
+
       - name: Configure private CocoaPods spec repo
         if: env.turbo_cache_hit != 1
         env:
@@ -184,6 +196,6 @@ jobs:
           fi
 
 # TODO : add it later for IOS
-      # - name: Build example for iOS
-      #   run: |
-      #     yarn turbo run build:ios --cache-dir="${{ env.TURBO_CACHE_DIR }}"
+      - name: Build example for iOS
+        run: |
+          yarn turbo run build:ios --cache-dir="${{ env.TURBO_CACHE_DIR }}"
