--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "19.1.0",
-    "react-native": "0.81.1"
+    "react-native": "0.81.1",
+    "react-native-app-monitor": "0.1.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
